--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "get-youtube-id": "^1.0.1",
     "google-auth-library": "^5.6.1",
     "googleapis": "^45.0.0",
     "lien": "^3.3.0",
